[gd_scene load_steps=6 format=2]

[ext_resource path="res://Characters/Raccoon.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Kenney High Square (TITLE).tres" type="DynamicFont" id=2]
[ext_resource path="res://minigames/Podium/World.gd" type="Script" id=3]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=4]
[ext_resource path="res://Themes/UI_Panel.tres" type="StyleBox" id=5]

[node name="Podium" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_top = 50

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 107.0
size_flags_vertical = 0
custom_constants/separation = 100
alignment = 1

[node name="MainMenu_Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 237.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 40 )
theme = ExtResource( 4 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CongratsText" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 337.0
margin_right = 687.0
margin_bottom = 57.0
rect_min_size = Vector2( 350, 0 )
rect_clip_content = false
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[wave amp=150 freq=4][rainbow freq=0.4 sat=1.3 val=1]Congratulations[/rainbow][/wave]"
text = "Congratulations"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Matchmake_Button" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 787.0
margin_right = 987.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 40 )
theme = ExtResource( 4 )
text = "Matchmake"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -604.0
margin_right = 512.0
custom_constants/margin_right = 250
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 774.0
margin_bottom = 604.0
custom_constants/separation = 300
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 87.0
margin_right = 87.0
margin_bottom = 604.0
custom_constants/margin_top = 50

[node name="Place2" type="Control" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_top = 50.0
margin_bottom = 604.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar" parent="MarginContainer/HBoxContainer/MarginContainer/Place2" instance=ExtResource( 1 )]
position = Vector2( 130.904, 346.347 )

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer/Place2"]
margin_left = 50.0
margin_top = 362.0
margin_right = 212.0
margin_bottom = 605.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer/Place2"]
margin_left = 85.0
margin_top = 362.0
margin_right = 177.0
margin_bottom = 605.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
color = Color( 0.980392, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer/Place2"]
margin_left = 85.0
margin_top = 371.0
margin_right = 177.0
margin_bottom = 389.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
color = Color( 0.6, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer/Place2"]
margin_left = 39.0
margin_top = 358.0
margin_right = 222.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer/Place2"]
margin_left = 65.0
margin_top = 358.0
margin_right = 197.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
color = Color( 0.615686, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="RichTextLabel" parent="MarginContainer/HBoxContainer/MarginContainer/Place2"]
margin_left = -8.0
margin_top = 163.0
margin_right = 262.0
margin_bottom = 204.0
custom_colors/default_color = Color( 0.898039, 0.898039, 0.898039, 1 )
bbcode_enabled = true
bbcode_text = "[center]Username[/center]"
text = "Username"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Place1" type="Control" parent="MarginContainer/HBoxContainer"]
margin_left = 387.0
margin_right = 387.0
margin_bottom = 604.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar" parent="MarginContainer/HBoxContainer/Place1" instance=ExtResource( 1 )]
position = Vector2( 130.904, 346.347 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Place1"]
margin_left = -387.0
margin_top = 578.0
margin_right = 637.0
margin_bottom = 608.0
custom_constants/separation = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Place1/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 10.0
custom_constants/margin_right = 300
custom_constants/margin_left = 310

[node name="ColorRect6" type="ColorRect" parent="MarginContainer/HBoxContainer/Place1/VBoxContainer/MarginContainer"]
margin_left = 310.0
margin_right = 724.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
rect_pivot_offset = Vector2( 120.836, 161.881 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/Place1/VBoxContainer"]
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 30.0
custom_constants/margin_right = 75
custom_constants/margin_left = 75

[node name="ColorRect7" type="ColorRect" parent="MarginContainer/HBoxContainer/Place1/VBoxContainer/MarginContainer2"]
margin_left = 75.0
margin_right = 949.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 120.836, 161.881 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/Place1"]
margin_left = 50.0
margin_top = 362.0
margin_right = 212.0
margin_bottom = 605.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/HBoxContainer/Place1"]
margin_left = 85.0
margin_top = 362.0
margin_right = 177.0
margin_bottom = 605.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
color = Color( 0.980392, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="MarginContainer/HBoxContainer/Place1"]
margin_left = 85.0
margin_top = 371.0
margin_right = 177.0
margin_bottom = 389.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
color = Color( 0.6, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/HBoxContainer/Place1"]
margin_left = 39.0
margin_top = 358.0
margin_right = 222.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="MarginContainer/HBoxContainer/Place1"]
margin_left = 65.0
margin_top = 358.0
margin_right = 197.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
color = Color( 0.615686, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="RichTextLabel" parent="MarginContainer/HBoxContainer/Place1"]
margin_left = -4.5
margin_top = 162.5
margin_right = 265.5
margin_bottom = 203.5
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Username[/center]"
text = "Username"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 687.0
margin_right = 687.0
margin_bottom = 604.0
custom_constants/margin_top = 100

[node name="Place3" type="Control" parent="MarginContainer/HBoxContainer/MarginContainer2"]
margin_top = 100.0
margin_bottom = 604.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar" parent="MarginContainer/HBoxContainer/MarginContainer2/Place3" instance=ExtResource( 1 )]
position = Vector2( 130.904, 346.347 )

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer2/Place3"]
margin_left = 50.0
margin_top = 362.0
margin_right = 212.0
margin_bottom = 605.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer2/Place3"]
margin_left = 85.0
margin_top = 362.0
margin_right = 177.0
margin_bottom = 605.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
color = Color( 0.980392, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer2/Place3"]
margin_left = 85.0
margin_top = 371.0
margin_right = 177.0
margin_bottom = 389.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
color = Color( 0.6, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer2/Place3"]
margin_left = 39.0
margin_top = 358.0
margin_right = 222.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="MarginContainer/HBoxContainer/MarginContainer2/Place3"]
margin_left = 65.0
margin_top = 358.0
margin_right = 197.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 120.836, 161.881 )
color = Color( 0.615686, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="RichTextLabel" parent="MarginContainer/HBoxContainer/MarginContainer2/Place3"]
margin_left = -5.5
margin_top = 164.5
margin_right = 264.5
margin_bottom = 205.5
custom_colors/default_color = Color( 1, 0.772549, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Username[/center]"
text = "Username"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/MainMenu_Button" to="." method="_on_MainMenu_Button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Matchmake_Button" to="." method="_on_Matchmake_Button_pressed"]
